Scene tree experiments, container proto struct, workspaces as scene_tree, container background scene_tree test for future 3d wallpaper expiriences

--- a/src/meson.build
+++ b/src/meson.build
@@ -34,6 +34,7 @@ sources = files(
     'utils/log.c',
     'input/seat.c',
     'input/input-manager.c',
+    'input/cursor.c',
     'utils/cli.c'
 )
 
